--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p><li>General Radiographer / General Hospital (2019-2022)
       <ul>
         <li>Perform general radiography techniques to high standard</li>
-        <li>Offering Initail assessment of images with abnormalities</li>
+        <li>Offering Initial assessment of images with abnormalities</li>
         <li>Performing QA on equipments and participating in on call and night duty rotas</li>
       </ul>
     </li></p>
